--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -816,8 +816,8 @@ p {
 }
 
 .about_image .image_content {
-  width: 185px;
-  height: 185px;
+  width: 175px;
+  height: 175px;
   background-color: #E84E4E;
   display: table;
   text-align: center;
@@ -886,6 +886,10 @@ p {
 
 .about_content {
   padding-right: 50px;
+}
+
+.about_content_text {
+  text-align:justify;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
