--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,26 @@ p {
   background-color: #E84E4E;
 }
 
+.wa-btn {
+  font-weight: 500;
+  /* text-align: center; */
+  /* white-space: nowrap; */
+  /* vertical-align: middle; */
+  /* user-select: none; */
+  border: 0;
+  border-radius: 10px;
+  padding: 0 40px;
+  font-size: 16px;
+  height: 55px;
+  line-height: 55px;
+  border-radius: 0;
+  color: #fff;
+  cursor: pointer;
+  /* z-index: 5;
+  transition: all 0.4s ease-out 0s; */
+  background-color: #128C7e;
+}
+
 .main-btn:hover {
   background-color: #ff6b6b;
   color: #fff;
