--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1102,6 +1102,10 @@ p {
   }
 }
 
+.pricing_list{
+  height: 700px;
+}
+
 .single_pricing .pricing_list li {
   margin-top: 15px;
   font-size: 16px;
